--- a/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
+++ b/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
@@ -85,7 +85,18 @@
     "<tbody>\n",
     "<tr class=\"odd\">\n",
     "\n",
-    "<td><p>6</br>-----S</br>----B-</br>------</br>------</br>--B---</br>--*---</br>left</br>down</br>down</br>down</br>left</p></td>\n",
+    "<td><p>6</br>-----S</br>\n",
+    "----B-</br>\n",
+    "------</br>\n",
+    "------</br>\n",
+    "--B---</br>\n",
+    "--*---</br>\n",
+    "left</br>\n",
+    "down</br>\n",
+    "down</br>\n",
+    "down</br>\n",
+    "left</p>\n",
+    "</td>\n",
     "\n",
     "<td><p>Game over!</p>\n",
     "<p>Food eaten: 1</p>\n",
@@ -107,7 +118,24 @@
     "</tr>\n",
     "<tr class=\"even\">\n",
     "\n",
-    "<td><p>7</br>--***S-</br>--*----</br>--***--</br>---**--</br>---*---</br>---*---</br>---*---</br>left</br>left</br>left</br>down</br>down</br>right</br>right</br>down</br>left</br>down</p></td>\n",
+    "<td><p>7</br>\n",
+    "--***S-</br>\n",
+    "--*----</br>\n",
+    "--***--</br>\n",
+    "---**--</br>\n",
+    "---*---</br>\n",
+    "---*---</br>\n",
+    "---*---</br>\n",
+    "left</br>\n",
+    "left</br>\n",
+    "left</br>\n",
+    "down</br>\n",
+    "down</br>\n",
+    "right</br>\n",
+    "right</br>\n",
+    "down</br>\n",
+    "left</br>\n",
+    "down</p></td>\n",
     "\n",
     "<td><p>You won! You fed the snake.</p>\n",
     "<p>Food eaten: 10</p>\n",
