--- a/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
+++ b/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
@@ -118,24 +118,26 @@
     "</tr>\n",
     "<tr class=\"even\">\n",
     "\n",
-    "<td><p>7</br>\n",
-    "--***S-</br>\n",
-    "--*----</br>\n",
-    "--***--</br>\n",
-    "---**--</br>\n",
-    "---*---</br>\n",
-    "---*---</br>\n",
-    "---*---</br>\n",
-    "left</br>\n",
-    "left</br>\n",
-    "left</br>\n",
-    "down</br>\n",
-    "down</br>\n",
-    "right</br>\n",
-    "right</br>\n",
-    "down</br>\n",
-    "left</br>\n",
-    "down</p></td>\n",
+    "<td>\n",
+    "<p>7</p></br>\n",
+    "<p>--***S-</p></br>\n",
+    "<p>--*----</p></br>\n",
+    "<p>--***--</p></br>\n",
+    "<p>---**--</p></br>\n",
+    "<p>---*---</p></br>\n",
+    "<p>---*---</p></br>\n",
+    "<p>---*---</p></br>\n",
+    "<p>left</p></br>\n",
+    "<p>left</p></br>\n",
+    "<p>left</p></br>\n",
+    "<p>down</p></br>\n",
+    "<p>down</p></br>\n",
+    "<p>right</p></br>\n",
+    "<p>right</p></br>\n",
+    "<p>down</p></br>\n",
+    "<p>left</p></br>\n",
+    "<p>down</p>\n",
+    "</td>\n",
     "\n",
     "<td><p>You won! You fed the snake.</p>\n",
     "<p>Food eaten: 10</p>\n",
