--- a/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
+++ b/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
@@ -120,22 +120,22 @@
     "\n",
     "<td>\n",
     "<p>7</p></br>\n",
-    "<p>--***S-</p></br>\n",
-    "<p>--*----</p></br>\n",
-    "<p>--***--</p></br>\n",
-    "<p>---**--</p></br>\n",
-    "<p>---*---</p></br>\n",
-    "<p>---*---</p></br>\n",
-    "<p>---*---</p></br>\n",
-    "<p>left</p></br>\n",
-    "<p>left</p></br>\n",
-    "<p>left</p></br>\n",
-    "<p>down</p></br>\n",
-    "<p>down</p></br>\n",
-    "<p>right</p></br>\n",
-    "<p>right</p></br>\n",
-    "<p>down</p></br>\n",
-    "<p>left</p></br>\n",
+    "<p>--***S-</p>\n",
+    "<p>--*----</p>\n",
+    "<p>--***--</p>\n",
+    "<p>---**--</p>\n",
+    "<p>---*---</p>\n",
+    "<p>---*---</p>\n",
+    "<p>---*---</p>\n",
+    "<p>left</p>\n",
+    "<p>left</p>\n",
+    "<p>left</p>\n",
+    "<p>down</p>\n",
+    "<p>down</p>\n",
+    "<p>right</p>\n",
+    "<p>right</p>\n",
+    "<p>down</p>\n",
+    "<p>left</p>\n",
     "<p>down</p>\n",
     "</td>\n",
     "\n",
