--- a/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
+++ b/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
@@ -118,7 +118,26 @@
     "</tr>\n",
     "<tr class=\"even\">\n",
     "\n",
-    "\n",
+    "<td>\n",
+    "<p>7</p></br>\n",
+    "<p>--***S-</p>\n",
+    "<p>--*----</p>\n",
+    "<p>--***--</p>\n",
+    "<p>---**--</p>\n",
+    "<p>---*---</p>\n",
+    "<p>---*---</p>\n",
+    "<p>---*---</p>\n",
+    "<p>left</p>\n",
+    "<p>left</p>\n",
+    "<p>left</p>\n",
+    "<p>down</p>\n",
+    "<p>down</p>\n",
+    "<p>right</p>\n",
+    "<p>right</p>\n",
+    "<p>down</p>\n",
+    "<p>left</p>\n",
+    "<p>down</p>\n",
+    "</td>\n",
     "\n",
     "<td><p>You won! You fed the snake.</p>\n",
     "<p>Food eaten: 10</p>\n",
