--- a/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
+++ b/2020 May - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "-   There will be no case in which the snake will go through itself.\n",
     "\n",
-    "### Examples\n",
+    "### Examples (!!! delete free space between rows !!!)\n",
     "\n",
     "<table>\n",
     "<thead>\n",
@@ -85,27 +85,33 @@
     "<tbody>\n",
     "<tr class=\"odd\">\n",
     "\n",
-    "<td><p>6</br>-----S</br>\n",
-    "----B-</br>\n",
-    "------</br>\n",
-    "------</br>\n",
-    "--B---</br>\n",
-    "--*---</br>\n",
-    "left</br>\n",
-    "down</br>\n",
-    "down</br>\n",
-    "down</br>\n",
-    "left</p>\n",
+    "<td>\n",
+    "<p>6</p>\n",
+    "<p>-----S</p>\n",
+    "<p>----B-</p>\n",
+    "<p>------</p>\n",
+    "<p>------</p>\n",
+    "<p>--B---</p>\n",
+    "<p>--*---</p>\n",
+    "<p>left</p>\n",
+    "<p>down</p>\n",
+    "<p>down</p>\n",
+    "<p>down</p>\n",
+    "<p>left</p>\n",
     "</td>\n",
     "\n",
-    "<td><p>Game over!</p>\n",
+    "<td>\n",
+    "<p>Game over!</p>\n",
     "<p>Food eaten: 1</p>\n",
     "<p>----..</p>\n",
     "<p>----.-</p>\n",
     "<p>------</p>\n",
     "<p>------</p>\n",
     "<p>--.---</p>\n",
-    "<p>--.---</p></td>\n",
+    "<p>--.---</p>\n",
+    "</td>\n",
+    "\n",
+    "\n",
     "<td><p>1) left 2) down 3) down 5) down</p>\n",
     "<p>----S. ----.. ----.. ----..</p>\n",
     "<p>----B- ----.- ----.- ----.-</p>\n",
