--- a/2020.05 - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
+++ b/2020.05 - Python Advanced/Advanced EXAM/COMPETE/02. Snake_Description.ipynb
@@ -275,11 +275,7 @@
     "            snake_pos[1] += 1\n",
     "            matrix[snake_pos[0]][snake_pos[1]] = 'S'\n",
     "\n",
-    "if not game_over or food_quantity >= 10:\n",
-    "    print(\"You won! You fed the snake.\")\n",
-    "else:\n",
-    "    print(\"Game over!\")\n",
-    "\n",
+    "print(\"You won! You fed the snake.\" if not game_over or food_quantity >= 10 else \"Game over!\")\n",
     "print(f\"Food eaten: {food_quantity}\")\n",
     "[print(\"\".join(i)) for i in matrix]\n"
    ],
